--- a/src/components/hero.module.css
+++ b/src/components/hero.module.css
@@ -10,17 +10,17 @@
     Ensure golden ratio for the hero size while limiting it to some extend to
     the viewport width
   */
-  height: 61.8vh;
+  height: 50%;
   max-height: 400px;
 }
 
 .heroDetails {
   position: absolute;
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.5);
   left: 50%;
   bottom: 0;
   transform: translate(-50%, 0);
-  font-size: 14px;
+  font-size: 21px;
   padding: 0 0.5em;
 }
 
