--- a/src/components/navigation.module.css
+++ b/src/components/navigation.module.css
@@ -1,20 +1,22 @@
 .navigation {
-  display: flex;
-  justify-content: center;
   list-style: none;
-  padding: 0;
-  margin: 0;
-  height: 20vh;
-  max-height: 100px;
-  font-size: 1.25em;
+  margin: 0; 
+  background: black;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: flex-end;
 }
 
 .navigationItem {
-  display: inline-flex;
+  display: flex;
   align-items: center;
   margin: 0 1em;
 }
 
 .navigationItem a {
-  color: currentColor;
+  text-decoration: none;
+  display: block;
+  padding: 1em;
+  color: white;
+  font-size: 2 em;
 }
