--- a/src/components/article-preview-card.css
+++ b/src/components/article-preview-card.css
@@ -23,12 +23,9 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  margin: 1.875em;
+  margin-right: 1.875em;
+  margin-bottom: 1.875em;
   box-shadow: 0 0.5em 1em rgba(0, 0, 0, 0.45);
-}
-
-.cardImage {
-  width: 100%;
 }
 
 .article-title {
@@ -81,8 +78,8 @@
 }
 
 .cardImage {
-  height: 300px;
-  width: 100%;
+  height: 20em;
+  width: 80vw;
   background-position: center;
   background-size: cover;
 }
@@ -99,7 +96,8 @@
   }
  .cardImage {
     height: 26.25em;
-    min-width: 22.5em;
+    width: 50vw;
+    background-position: center;
     background-size: cover;
   }
  .card-text-container {
@@ -110,6 +108,15 @@
 
 @media screen and (min-width: 1024px) {
   .card-container {
-    max-width: 75em;
+    max-width: 70vw;
+  }
+  .card-text-container {
+    min-width: 15em;
+    margin-right: 10em; 
+  }
+  .cardImage {
+    min-width: 10em;
+    min-height: 14em;
+    background-size: cover;
   }
 }
